Bug 1315212 - Allow for failed call to wrapped DrawTarget in DrawTargetRecording::CreateSimilarDrawTarget. r=bas, a=ritu

MozReview-Commit-ID: 4SMixY4Nook